# PHUS

./: CMakeLists.txt
code/: IndexTable.cpp  IndexTable.h  Sequence.cpp  Sequence.h  SequenceReader.cpp  SequenceReader.h  Transaction.cpp  Transaction.h  finding_hus.cpp  finding_hus.h  main.cpp  phus.cpp  phus.h  statistics.cpp  statistics.h  types.h
tests/: IndexTable_tests.cpp  SequenceReader_tests.cpp  Sequence_tests.cpp  Transaction_tests.cpp  finding_hus_tests.cpp  phus_tests.cpp
tests/data/: sample.data  sample_with_cardinalities.data
